--- a/layout.css
+++ b/layout.css
@@ -19,7 +19,7 @@ header {
 
 h1{
     font-size: 200;
-    background-color: coral;
+    /*background-color: coral;*/
 }
 /* header 의 자손인 h1태그에 적용*/
 header h1{
@@ -56,5 +56,67 @@ nav ul li {
 a{  /* nav a or nav ul li a */
    text-decoration: none;
    color: blue;   
+
+}
+
+section {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto; /*영역 가운데 정렬*/
+    border: 5px solid #333;
+    /*border-width: ;
+    border-style: ;
+    border-color: ;*/
+    padding: 5px;
+}
+
+h2{
+    font-size: 1.8em;
+    padding: 15px;
+    border-radius: 3px;
+    box-shadow: -3px 3px 3px 3px rgb(198,198,198);
+}
+
+h3{
+    font-size: 1.3em;
+    padding: 15px 0px 15px 0px;
+    border-left: 8px solid rgb(242,56,146);
+    
+
+
+}
+
+P{
+    font-size: 15px;
+    line-height: 30px;
+    margin: 20px;
+}
+
+dl {
+    line-height: 30px;
+    padding-left: 30px;
+    margin-right: 30px;
+}
+
+dt{
+    
+    font-size: 1.1em;
+    font-weight: bold;
+    color: chartreuse;
+}
+article ul{
+    line-height: 30px;
+}
+
+footer{
+    
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
+    color: white;
+    width: 80%;
+    padding: 10px;
+    text-align: center;
+
 
 }
